# ckanext-dge-harvest

./: README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
ckanext/dge_harvest/: cli.py  decorators.py  harvester_config_reader.py  helpers.py  logic.py  losser.py  plugin.py  processors.py  tasks.py  utils.py  views.py  vocabulary_utils.py
ckanext/dge_harvest/commands/: __init__.py  columns.json  dge_harvester.py
ckanext/dge_harvest/config/: dcat_ap_es_1_0_0_config.ini.template
ckanext/dge_harvest/constants/: __init__.py  constants.py  dcat_ap_es_constants.py  nti_constants.py
ckanext/dge_harvest/export/: csv_export_utils.py  export_utils.py  rdf_export_generator.py  rdf_xml_parser.py  rdf_xml_parser_base.py
ckanext/dge_harvest/harvesters/: __init__.py  dge_dcat_ap_es_harvester.py  dge_harvester.py  dge_nti_harvester.py
ckanext/dge_harvest/harvesters/utils/: __init__.py  gather_stage_info.py  gather_stage_parse_utils.py  gather_stage_preprocessing_utils.py  gather_stage_validation.py  gather_stage_validation_utils.py  harvester_hooks.py  harvester_utils.py  (+5 more)
ckanext/dge_harvest/i18n/: ckanext-dge_harvest.pot
ckanext/dge_harvest/profiles/: __init__.py  _profile_serialize_utils.py  _profile_utils.py  base_profile.py  base_profile_parse_utils_base.py  dcat_ap_es_profile_parse_utils_base.py  dge_dcat_ap_es_profile.py  dge_nti_profile.py
ckanext/dge_harvest/rdf_store/: __init__.py  rdf_store.py  rdf_store_delete.py  rdf_store_helper.py  rdf_store_insert_or_update.py  rdf_store_query.py
ckanext/dge_harvest/tests/: __init__.py  test_plugin.py
(+28 files in other folders)
