

[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/dge_harvest/i18n/ckanext-dge_harvest.pot
width = 80

[init_catalog]
domain = ckanext-dge_harvest
input_file = ckanext/dge_harvest/i18n/ckanext-dge_harvest.pot
output_dir = ckanext/dge_harvest/i18n

[update_catalog]
domain = ckanext-dge_harvest
input_file = ckanext/dge_harvest/i18n/ckanext-dge_harvest.pot
output_dir = ckanext/dge_harvest/i18n
previous = true

[compile_catalog]
domain = ckanext-dge_harvest
directory = ckanext/dge_harvest/i18n
statistics = true